src/test/ui/const-eval/shift_overflow.stderr
error[E0080]: could not evaluate enum discriminant
  --> $DIR/shift_overflow.rs:13:9
   |
LL |     X = 1 << ((u32::max_value() as u64) + 1), //~ ERROR E0080
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to shift left with overflow

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
